--- a/src/assets/styles/mixin.less
+++ b/src/assets/styles/mixin.less
@@ -12,3 +12,25 @@
   cursor: pointer;
   color: @color;
 }
+
+@keyframes flash {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.text-loading-block(@bgColor: #dcdcdc) {
+  height: 1.5em;
+  background: @bgColor;
+  background-size: 600% 600%;
+  border-radius: 2px;
+  animation: flash 1s ease infinite;
+}
